[gd_scene load_steps=9 format=3 uid="uid://bvl71gsqryfai"]

[ext_resource type="Script" path="res://game_overlay/game_overlay.gd" id="1_6vak0"]
[ext_resource type="Theme" uid="uid://cehlnuq88iqv4" path="res://primary_theme.tres" id="1_wh8a7"]
[ext_resource type="PackedScene" uid="uid://bnx7i0eyv5oln" path="res://game_overlay/life.tscn" id="3_2jy7s"]
[ext_resource type="Texture2D" uid="uid://chmktvkf4d0fm" path="res://game_overlay/Points.png" id="4_nnei5"]

[sub_resource type="Curve" id="Curve_tdlt4"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_ynjnr"]
interpolation_mode = 2
colors = PackedColorArray(1, 0.562366, 0.524564, 1, 1, 1, 0, 1)

[sub_resource type="Gradient" id="Gradient_a73x0"]
interpolation_mode = 2
colors = PackedColorArray(0.713726, 0.945098, 0.972549, 1, 1, 0.666667, 0.984314, 1)

[sub_resource type="Curve" id="Curve_ehslv"]
min_value = -1.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, -1), 0.0, 0.0, 0, 0]
point_count = 2

[node name="GameOverlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6vak0")

[node name="GameEndContainer" type="VBoxContainer" parent="."]
visible = false
z_index = 100
z_as_relative = false
layout_mode = 0
offset_right = 490.0
offset_bottom = 402.0

[node name="GameEndLabel" type="Label" parent="GameEndContainer"]
layout_mode = 2
theme = ExtResource("1_wh8a7")
theme_override_font_sizes/font_size = 150
text = "You Lose!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayAgainButton" type="Button" parent="GameEndContainer"]
layout_mode = 2
theme = ExtResource("1_wh8a7")
theme_override_font_sizes/font_size = 100
text = "Play Again"

[node name="MenuButton" type="Button" parent="GameEndContainer"]
layout_mode = 2
theme = ExtResource("1_wh8a7")
theme_override_font_sizes/font_size = 100
text = "Main Menu
"

[node name="WinParticles" type="CPUParticles2D" parent="."]
z_index = 99
z_as_relative = false
position = Vector2(384, 384)
emitting = false
amount = 50
lifetime = 0.8
explosiveness = 0.9
emission_shape = 2
emission_sphere_radius = 1.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 450.0
initial_velocity_max = 500.0
scale_amount_min = 10.0
scale_amount_max = 20.0
scale_amount_curve = SubResource("Curve_tdlt4")
color = Color(1, 1, 0, 1)
color_ramp = SubResource("Gradient_ynjnr")
color_initial_ramp = SubResource("Gradient_a73x0")
hue_variation_min = -1.0
hue_variation_max = 1.0
hue_variation_curve = SubResource("Curve_ehslv")

[node name="LivesContainer" type="HBoxContainer" parent="."]
z_index = 98
z_as_relative = false
layout_mode = 0
offset_left = 104.0
offset_top = 631.0
offset_right = 268.0
offset_bottom = 697.0

[node name="Life" parent="LivesContainer" instance=ExtResource("3_2jy7s")]
layout_mode = 2

[node name="Life2" parent="LivesContainer" instance=ExtResource("3_2jy7s")]
layout_mode = 2

[node name="Life3" parent="LivesContainer" instance=ExtResource("3_2jy7s")]
layout_mode = 2

[node name="PointsTexture" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 110.0
offset_top = 700.0
offset_right = 150.0
offset_bottom = 740.0
texture = ExtResource("4_nnei5")

[node name="PointsLabel" type="Label" parent="."]
z_index = 98
z_as_relative = false
layout_mode = 0
offset_left = 160.0
offset_top = 680.0
offset_right = 449.0
offset_bottom = 762.0
theme = ExtResource("1_wh8a7")
text = "0"
vertical_alignment = 1

[node name="RoundLabel" type="Label" parent="."]
z_index = 98
z_as_relative = false
layout_mode = 0
offset_left = 425.0
offset_top = 680.0
offset_right = 714.0
offset_bottom = 762.0
theme = ExtResource("1_wh8a7")
text = "1"
horizontal_alignment = 2
vertical_alignment = 1

[connection signal="pressed" from="GameEndContainer/PlayAgainButton" to="." method="_on_play_again_button_pressed"]
[connection signal="pressed" from="GameEndContainer/MenuButton" to="." method="_on_menu_button_pressed"]
